--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -315,14 +315,6 @@
 		font-weight: 300;
 		margin: 0;
 	}
-	input[type="checkbox"] {
-		opacity: 1;
-		vertical-align: bottom;
-		background-color: red;
-	}
-	input:checked {
-		color: red;
-	}
 	input[type="text"] {
 		display: block;
 		margin: 0;
@@ -335,8 +327,33 @@
 		text-align: right;			
 		&:focus {
 			outline: 1px solid $green;
-		}		
+		}
 	}	
+	input[type=radio] {
+		opacity: 0;
+		position: absolute;
+		top: 0;
+		left: -20px; /* pushes off radio button */
+		overflow: visible; /* HOW DOES THIS EVEN FIX IT? BUT IT WORKS?! */
+	}
+	input[type=radio]:checked {
+		opacity: 1;
+	}
+	input[type=radio]:checked:before {
+		content: 'Selected';
+		position: absolute;
+		top: 0px;
+		left: 0px;
+		margin-left: 20px; /*compensates from being moved left */
+		display: block;
+		padding: 4rem 0 0 25%;
+		width: 100%;
+		height: 100%;
+		background-color: $green;
+		font-family: 'Roboto', sans-serif;
+		font-weight: 100;
+		color: $light-grey;
+	}
 	::-webkit-input-placeholder {
 		color: #A1A1A1;
 		font-family: 'Roboto', sans-serif;
@@ -344,21 +361,29 @@
 		font-weight: 100;
 		text-align: center;
 	}
-	::-moz-input-placeholder { 
-		color: $dark-grey;
+	::-moz-placeholder { 
+		color: #A1A1A1;
 		font-family: 'Roboto', sans-serif;
 		font-size: 4rem;
 		font-weight: 100;
 		text-align: center;
 	}
-	::-ms-input-placeholder {
-		color: $dark-grey;
+	:-moz-placeholder { 
+		color: #A1A1A1;
+		font-family: 'Roboto', sans-serif;
+		font-size: 4rem;
+		font-weight: 100;
+		text-align: center;
+	}
+	:-ms-input-placeholder {
+		color: #A1A1A1;
 		font-family: 'Roboto', sans-serif;
 		font-size: 4rem;
 		font-weight: 100;
 		text-align: center;
 	}
 	&:hover {
+		cursor: pointer;
 		h3 {
 			color: $light-grey;
 			transform: translateY(-5px);
