--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -334,37 +334,39 @@
 		position: absolute;
 		top: 0;
 		left: -20px; /* pushes off radio button */
+		width: 100%;
+		display: block;
+		margin-right: 20px;
 		overflow: visible; /* HOW DOES THIS EVEN FIX IT? BUT IT WORKS?! */
 	}
 	input[type=radio]:checked {
 		opacity: 1;
-		input {
-			font-size: 1rem;
-		}
+		@include ease(all, 250ms, ease-in);
 	}
 	input[type=radio]:checked:before {
 		content: 'Selected';
 		position: absolute;
-		top: 0px;
+		bottom: 0px;
 		left: 0px;
 		margin-left: 20px; /*compensates from being moved left */
 		display: block;
-		padding: 4rem 0 0 25%;
+		padding: 0 0 4rem 25%;
 		width: 100%;
-		height: 100%;
-		background-color: $green;
+		height: 3.25rem;
+		background-color: rgba(119,201,81,1);
 		font-family: 'Roboto', sans-serif;
-		font-weight: 100;
+		font-weight: 300;
 		color: $light-grey;
-		@media only screen and (max-width: 25em) { /* — — — — — SMALL to LARGE Screens — — — — — */
-			font-size: 2.5rem;
-			padding: 4rem 0 0 25%;
+		font-size: 1.75rem;
+		line-height: 3.25rem; /* to compensate for the height of the box */
+		@media only screen and (max-width: 25em) { /* — — — — — XSMALL Screens — — — — — */
+			padding: 0 0 0rem 31%;
 		}
 		@media only screen and (min-width: 25em) { /* — — — — — SMALL to LARGE Screens — — — — — */
-			padding: 4rem 0 0 25%;
+			padding: 0 0 0rem 38%;
 		}
 		@media only screen and (min-width: 90em) { /* — — — — —XLARGE Screens — — — — — */
-			padding: 4rem 0 0 17.5%;
+			padding: 0 0 0rem 35%;
 		}
 	}
 	::-webkit-input-placeholder {
