--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -315,7 +315,7 @@
 		font-weight: 300;
 		margin: 0;
 	}
-	input[type="text"] {
+	input[type="number"] {
 		display: block;
 		margin: 0;
 		width: 100%;
@@ -341,18 +341,20 @@
 	}
 	input[type=radio]:checked {
 		opacity: 1;
-		@include ease(all, 250ms, ease-in);
+		@include ease(all, 150ms, ease-in);
+		transform: translateY(9.75rem);
+		height: 3.25rem;
+	
 	}
 	input[type=radio]:checked:before {
 		content: 'Selected';
 		position: absolute;
-		bottom: 0px;
+		top: 0px;
 		left: 0px;
 		margin-left: 20px; /*compensates from being moved left */
 		display: block;
 		padding: 0 0 4rem 25%;
 		width: 100%;
-		height: 3.25rem;
 		background-color: rgba(119,201,81,1);
 		font-family: 'Roboto', sans-serif;
 		font-weight: 300;
@@ -361,12 +363,12 @@
 		line-height: 3.25rem; /* to compensate for the height of the box */
 		@media only screen and (max-width: 25em) { /* — — — — — XSMALL Screens — — — — — */
 			padding: 0 0 0rem 31%;
-		}
+		}		
 		@media only screen and (min-width: 25em) { /* — — — — — SMALL to LARGE Screens — — — — — */
 			padding: 0 0 0rem 38%;
 		}
 		@media only screen and (min-width: 90em) { /* — — — — —XLARGE Screens — — — — — */
-			padding: 0 0 0rem 35%;
+			padding: 0 0 0rem 36.5%;
 		}
 	}
 	::-webkit-input-placeholder {
