--- a/css/style.css
+++ b/css/style.css
@@ -1483,3 +1483,65 @@ tr:nth-child(even) {
           -ms-transform: translateY(105px);
               transform: translateY(105px);
       opacity: 1; }
+
+/* line 419, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+textarea {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  padding: 0.5rem;
+  font-size: 1.25rem;
+  width: 100%;
+  margin-top: 0.5rem;
+  background-color: #f5f5f5;
+  border: none; }
+
+/* line 430, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+.dedication {
+  position: relative;
+  height: 3.75rem;
+  float: left; }
+  /* line 434, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+  .dedication label {
+    width: 100%;
+    font-size: 1rem;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    line-height: 2rem; }
+  /* line 442, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+  .dedication input[type="text"], .dedication input[type="email"] {
+    float: right;
+    height: 2rem;
+    border: none;
+    width: 100%;
+    overflow: auto;
+    padding-left: 1rem;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1rem;
+    font-weight: 300;
+    background-color: #f5f5f5; }
+    /* line 453, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+    .dedication input[type="text"]:focus, .dedication input[type="email"]:focus {
+      outline: 1px solid #6B8E23; }
+  @media only screen and (min-width: 25em) {
+    .dedication {
+      /* — — — — — Up to SMALL Screens — — — — — */ }
+      /* line 458, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+      .dedication label {
+        width: 35%; }
+      /* line 462, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+      .dedication input[type="text"], .dedication input[type="email"] {
+        width: 65%; } }
+
+@media only screen and (max-width: 25em) {
+  /* — — — — — Up to SMALL Screens — — — — — */
+  /* line 469, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+  .mobile {
+    width: 90%; }
+ }
+
+@media only screen and (max-width: 38em) {
+  /* — — — — — Up to SMALL Screens — — — — — */
+  /* line 475, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+  .mobile {
+    width: 95%; }
+ }
