--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -415,3 +415,64 @@
 	background: $green;
 	}
 }
+
+textarea {
+	font-family: 'Roboto', sans-serif;
+	font-weight: 300;
+	padding: .5rem;
+	font-size: 1.25rem;
+	width: 100%;
+	margin-top: .5rem;
+	background-color: $light-grey;
+	border: none;
+}
+
+.dedication {
+	position: relative;
+	height: 3.75rem;
+	float: left;
+	label {
+		width: 100%;
+		font-size: 1rem;
+		font-family: 'Roboto', sans-serif;
+		font-weight: 400;
+		line-height: 2rem;
+	}
+	input[type="text"],
+	input[type="email"] {
+		float: right;
+		height: 2rem;
+		border: none;
+		width: 100%;
+		overflow: auto;
+		padding-left: 1rem;
+		font-family: 'Roboto', sans-serif;
+		font-size: 1rem;
+		font-weight: 300;
+		background-color: $light-grey;
+		&:focus {
+			outline: 1px solid $green;
+		}
+	}
+	@media only screen and (min-width: 25em) { /* — — — — — Up to SMALL Screens — — — — — */
+		label {
+			width: 35%;
+		}
+		input[type="text"],
+		input[type="email"] {
+			width: 65%;
+		}
+	}
+}
+
+@media only screen and (max-width: 25em) { /* — — — — — Up to SMALL Screens — — — — — */
+	.mobile {
+		width: 90%;
+	}
+}
+
+@media only screen and (max-width: 38em) { /* — — — — — Up to SMALL Screens — — — — — */
+	.mobile {
+		width: 95%;
+	}
+}
