--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -476,3 +476,11 @@ textarea {
 		width: 95%;
 	}
 }
+
+.info-box {
+	display: inline-block;
+	float: left;
+	height: 13rem;
+	text-align: center;
+	padding: 1.75rem;
+}
